tests/snapshots/error-parser-outside_class_directive-before_class_dir-dot_code.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.code
.class public HelloWorld
.super java/lang/Object
----- STDERR -----
[E-008] Error: unexpected directive outside class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/before_class_dir/dot_code.rns:1:1 ]
   │
 1 │ .code
   │ ──┬──  
   │   ╰──── valid context for .code directive is: 'method body'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
